Updated package.json to reflect engines

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "An appropriate copy service for music",
   "version": "0.0.1",
   "private": true,
+  "engines":{
+    "node": "0.8.x",
+    "npm":  "1.2.x"
+  }
   "dependencies": {
     "express": "~3.1.0",
     "rdio-node": "git://github.com/monsur/rdio-node.git",
